# xontrib-assistant

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_xontrib.py
xontrib_assistant/: main.py
